= 0.12.3 / 2012-03-23

  * Ignore broken symlinks when displaying a directory listing using
    strata.directory.

  * Fix memory leak when using the default app in strata.run.

= 0.12.2 / 2012-03-06

  * Added a missing comma.

= 0.12.1 / 2012-03-06

  * Added -d option to the strata executable. This allows you to easily serve
    the contents of a given directory over HTTP(S).

= 0.12.0 / 2012-03-03

  * Removed the Builder, Mapper, and Router constructors in favor of similar
    (but not identical) build, map, and route middlewares.

  * Added the ability for users to call any of the build/map/route methods
    directly on the strata module itself. Doing so generates a "default" app
    that may be run by calling `strata.run` with no other arguments.

  * Added all routing methods to the build middleware to enable easier app
    creation. The caveat is that calls to the routing methods are not
    interleaved with calls to use & map. Instead, they are simply forwarded to
    a downstream route middleware which is set as the default app of the build.

= 0.11.0 / 2012-01-19

  * Removed dependency on gzbz2. strata.gzip requires node >= 0.6.

= 0.10.1 / 2012-01-03

  * Fixed bug that prevented caching request body when the body is empty.

= 0.10.0 / 2011-12-22

  * Bumped dependency on node down to 0.4.7. Some features of 0.6 may be used
    if they are available (i.e. when running on node 0.6), but strata only
    requires 0.4.7. This should help users who are deploying to platforms that
    are not on the bleeding edge of node development.

= 0.9.1 / 2011-12-21

  * Renamed strata.static to strata.file.

  * Use Vary header when using gzip encoding.

= 0.9.0 / 2011-12-07

  * Remove routing capabilities from Builder.

  * Added ability for Builder, Mapper, and Router to receive an app that
    responds to `toApp`. See strata.app.

  * Added Response.headers and Request.headers, and all corresponding properties
    to their respective prototypes.
