@@ -45,6 +45,8 @@ module.exports = function (app, root) {
                         app(env, callback);
                     }
                 });
+            } else {
+                app(env, callback);
             }
         });
     }
